# gnostr-cli

./: .gitignore  Cargo.toml  GNUmakefile  README.md  cargo.mk
.github/workflows/: clippy_rustfmt_test.yaml  gnostr-docker.yml
src/: branch_refs.rs  cli_helpers.rs  config.rs  fetch_pull_push.rs  lib.rs  main.rs  merge.rs  patch.rs  pull_request.rs  repo_config.rs
src/funcs/: apply_patches.rs  create_branch_and_pr.rs  create_patches.rs  find_commits_ahead.rs  find_latest_patch.rs  find_select_recent_repos.rs  get_updates_of_patches.rs
src/groups/: group.rs  groups.rs  init.rs
src/repos/: init.rs  repo.rs
src/sub_commands/: clone.rs  init.rs  list.rs  merge.rs  rebroadcast.rs  send.rs
