[package]
name = "gnostr-cli"
version = "0.0.4"
edition = "2021"
description = "gnostr-cli: git/nostr git2 command line utility"
authors = ["DanConwayDev <DanConwayDev@protonmail.com>", "admin@gnostr.org <admin@gnostr.org>"]
readme = "README.md"
homepage = "https://github.com/gnostr-org/gnostr-cli"
repository = "https://github.com/gnostr-org/gnostr-cli"
license = "MIT"
keywords = ["gnostr","nostr", "git"]
categories = ["command-line-utilities","git"]

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
nostr = { version = "0.22" }
nostr-sdk = { version = "0.22", features = ["blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
dialoguer = "0.10.4"
indicatif = "0.17.3"
thiserror = "1.0"
confy = "0.5.1"
git2 = "0.17.1"
